[package]
name = "difftest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.4"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
env_logger = "0.10.0"
log = "0.4.17"
tempfile = "3.3.0"
