[package]
name = "difftest"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
clap = "4.1.4"
colored = "2.0.0"
env_logger = "0.11.3"
log = "0.4.17"
rayon = "1.7.0"
serde = { version = "1", features = ["derive"] }
tempfile = "3.3.0"
