[package]
name = "generate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mir = { path = "../mir" }
abi = { path = "../abi" }
rangemap = { path = "../rangemap" }
petgraph = "0.6.3"
rand = { version = "0.8.5", features = ["small_rng"] }
log = "0.4.17"
env_logger = "0.10.0"
rand_distr = "0.4.3"
smallvec = "1.10.0"
bimap = "0.6.3"
index_vec = "0.1.3"
clap = { version = "4.1.4", features = ["cargo"] }
